package com.UKC_AICS.simulation.managers;

public abstract class Manager {

/**
 *
 * @author Emily
 */	
	
	abstract public void update(); 
}
