package com.UKC_AICS.simulation.managers;

/**
 *
 * @author Emily
 */
public class WorldManager extends Manager {
    
    public WorldManager() {
        
    }

    @Override
    public void update() {
        
    }

}
